--- a/yimi/composer.json
+++ b/yimi/composer.json
@@ -6,10 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "dirape/token": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "simplesoftwareio/simple-qrcode": "~2",
+        "intervention/image": "2.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
